@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19931217
+MANIFEST for ded, version t19940309
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
