@@ -1,3 +1,8 @@
+1994-03-09  dickey@software.org
+
+	* src/dedview.c:
+	corrected a place in 'showMARK()' where I clobbered the current location
+
 1993-12-17  dickey@software.org
 
 	* src/dedtype.c:
